--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 
+<head>
+  <link rel="stylesheet" href="propertyscout.css">
+</head>
+
 <body>
   <div id="property-scout-contact-form"></div>
-  <!-- <link rel="stylesheet" href="propertyscout.css"> -->
   <script src="propertyscout.js" type="text/javascript" data-property-scout-token="JWT_token12345"></script>
 </body>
